# scarf

./: Cargo.toml  Readme.md
.github/workflows/: docs.yml  rust.yml
docs/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/scarf/: all.html  enum.DestOperand.html  enum.DisasmError.html  enum.Error.html  enum.FlagArith.html  enum.Operation.html  fn.parse.html  fn.parse_x86_64.html  fn.raw_bin.html  index.html  sidebar-items.js  struct.BinaryFile.html  struct.BinaryFileWithCachedSection.html  struct.BinarySection.html  struct.DestArchId.html  struct.FlagUpdate.html  struct.Instruction.html  struct.OutOfBounds.html  struct.Rva.html  struct.Rva64.html  struct.SpecialBytes.html  struct.VirtualAddress.html  struct.VirtualAddress32.html  struct.VirtualAddress64.html
docs/scarf/analysis/: enum.Error.html  fn.find_functions.html  fn.find_functions_with_callers.html  fn.find_functions_with_callers_x86.html  fn.find_functions_with_callers_x86_64.html  fn.find_relocs.html  fn.find_relocs_x86.html  fn.find_relocs_x86_64.html  fn.find_switch_tables.html  fn.relocs_with_values.html  index.html  sidebar-items.js  struct.CfgState.html  struct.Control.html  struct.DefaultState.html  struct.FuncAnalysis.html  struct.FuncCallPair.html  type.Cfg.html  (+4 more)
docs/search.index/: 009cb387e2.js  04e59bf1e7.js  05374ebefc.js  07fbce430d.js  09e88562a6.js  0a557ac5bf.js  0ae7cb4c20.js  0d0c8fe19e.js  0dba1a9131.js  0e04aaa690.js  120e8ad638.js  128c412ffd.js  1b99436708.js  1d0327e7b0.js  1f196c2d90.js  25e7b4a150.js  265b9861e3.js  2950cc379d.js  2a02b214b0.js  2b77482db5.js  2c12e76e3e.js  2cf81914bb.js  2d279f2134.js  2eae7d56ef.js  2ef22bec08.js  35324c4187.js  372ae3a12e.js  3768bc83db.js  38a8b35bc6.js  399b328b27.js  3a49a8b5b1.js  3aafac56a7.js  3ad6a9de43.js  3afc54aaf7.js  3f19e04200.js  41ba3af180.js  4291048a5e.js  4376d731a7.js  4658a4dc1d.js  473dec2443.js  (+39 more)
src/: analysis.rs  bit_misc.rs  cfg.rs  cfg_dot.rs  disasm.rs  disasm_cache.rs  exec_state.rs  exec_state_x86.rs  exec_state_x86_64.rs  heapsort.rs  lib.rs  light_byteorder.rs  operand.rs  u64_hash.rs  vec_drop_iter.rs
src/operand/: deserialize.rs  intern.rs  normalize_tests.rs  simplify.rs  simplify_tests.rs  slice_stack.rs  util.rs
src/tools/: constant_comment.rs  memory.rs  mod.rs  queued_comments.rs  switch.rs
test_inputs/: cfg.asm  exec_state.asm  exec_state_x86_64.asm  slow.asm  slow_64.asm
tests/: analysis_api.rs  cfg.rs  exec_state.rs  exec_state_x86_64.rs  slow.rs
tests/helpers/: mod.rs
tests/shared_x86/: mod.rs
(+134 files in other folders)
