[package]
name = "scarf"
version = "0.3.0"
authors = ["Markus Heikkinen <ittevien@gmail.com>"]
edition = "2018"

[profile.release]
debug = true

[[bin]]
name = "scarf-cfg"
path = "src/bin/scarf-cfg.rs"
required-features = ["binaries"]

[dependencies]
array-init = "0.1.1"
byteorder = "1.1.0"
fxhash = "0.2"
hashbrown = { version = "0.7", default-features = false }
lde = { git = "https://github.com/CasualX/lde" }
log = "0.4"
quick-error = "1.2.0"
serde = { version = "1.0.104", features = ["derive", "rc"], optional = true }
smallvec = "1.0"
typed-arena = "2.0"

clap = { version = "2.27.1", optional = true }

[dev-dependencies]
bincode = "1.0"

[features]
binaries = ["clap"]
fuzz = []
