[package]
name = "scarf"
version = "0.3.0"
authors = ["Markus Heikkinen <ittevien@gmail.com>"]
edition = "2018"

[profile.release]
debug = true

[[bin]]
name = "scarf-cfg"
path = "src/bin/scarf-cfg.rs"
required-features = ["binaries"]

[dependencies]
arrayvec = "0.7"
array-init = "2.0"
byteorder = "1.1.0"
copyless = "0.1"
fxhash = "0.2"
hashbrown = { version = "0.12", default-features = false }
lde = { git = "https://github.com/CasualX/lde", rev = "6d8e287075eae41d0c6bae4c2f3a54268e0f8b4a" }
log = "0.4"
quick-error = "2.0"
serde = { version = "1.0.104", features = ["derive", "rc"], optional = true }
smallvec = "1.4"
typed-arena = "2.0"

clap = { version = "2.27.1", optional = true }

[dev-dependencies]
# Bincode 1.3.2 doesn't want to use byteorder 1.4.x since it requires too new rust;
# Since this is just for testing serialization force an older version which doesn't care
# (Tests wouldn't care about old byteorder either so idk if this is worth anything)
bincode = "=1.2"
serde_json = "1.0"

[features]
binaries = ["clap"]
fuzz = []
