[package]
name = "scarf"
version = "0.3.0"
authors = ["Markus Heikkinen <ittevien@gmail.com>"]
edition = "2021"

[profile.release]
debug = true

[dependencies]
arrayvec = "0.7"
array-init = "2.0"
byteorder = { version = "1.4", default-features = false }
copyless = "0.1"
fxhash = "0.2"
hashbrown = { version = "0.12", default-features = false }
lde = { git = "https://github.com/CasualX/lde", rev = "6d8e287075eae41d0c6bae4c2f3a54268e0f8b4a" }
log = "0.4"
quick-error = "2.0"
serde = { version = "1.0.104", features = ["derive", "rc"], optional = true }
smallvec = "1.4"
typed-arena = "2.0"

[dev-dependencies]
serde_json = "1.0.91"

[features]
fuzz = []
